@@ -72,6 +72,10 @@
   which usually indicates a bug in the eventlistener.  Thanks to Steve
   Winton and detailyang for reporting issues that led to this change.
 
+- Errors from the web interface are now logged at the ``ERROR`` level.
+  Previously, they were logged at the ``TRACE`` level and easily
+  missed.  Thanks to Thomas Güttler for reporting this issue.
+
 3.1.3 (2014-10-28)
 ------------------
 
@@ -155,7 +159,7 @@
   it caused installation issues on some systems.
 
 - Fixed a bug in Medusa where the HTTP Basic authorizer would cause an
-  exception if the password contained a colon.  Thanks to Thomas Guttler
+  exception if the password contained a colon.  Thanks to Thomas Güttler
   for reporting this issue.
 
 - Fixed an XML-RPC bug where calling supervisor.clearProcessLogs() with a
